Change some List types